completed basic queries

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% block head_title %}Home{% endblock%}
 {% block body_block %}
 <h5><a href="listallmovies?page=1">List of All Movies</a></h5>
-<h5><a href="createlist">Create Watchlist </a></h5>
+<h5><a href="createlist">Create Playlist </a></h5>
+<h5><a href="listalllist">Show My Playlists </a></h5>
 {% endblock %}
